feat: implement more commands ; Module command